[gd_scene load_steps=7 format=3 uid="uid://cs8aykm1ys6u3"]

[ext_resource type="Script" path="res://Scripts/Barrel.gd" id="1_0qr27"]
[ext_resource type="Texture2D" uid="uid://cgyvrl1eby5se" path="res://Assets/Sprites/background/barrel_pasta.png" id="1_ge3l3"]
[ext_resource type="Texture2D" uid="uid://mr1yevt50u48" path="res://Assets/Sprites/background/barrel_sandwich.png" id="2_7d4id"]
[ext_resource type="Texture2D" uid="uid://bnxxrltva8ra1" path="res://Assets/Sprites/background/barrel_soup.png" id="3_e63s6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x1u15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ge3l3")
}],
"loop": true,
"name": &"pasta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7d4id")
}],
"loop": true,
"name": &"sandwich",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_e63s6")
}],
"loop": true,
"name": &"soup",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f368c"]
radius = 16.0
height = 48.0

[node name="Barrel" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_0qr27")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x1u15")
animation = &"soup"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_f368c")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
